fix the icon and paragraph alignment

--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,37 @@ button{
 button:hover{
   color:#1bda3b;
   box-shadow: 0 2px #1bda3b;
+  transition: 0.3s;
 }
+.job-info h3{
+  font-weight: 400;
+}
+.job-info h4{
+  text-transform: uppercase;
+  color:hsl(209, 45%, 68%);
+  background:hsl(212, 33%, 89%);
+  display: inline;
+  padding: 0.375rem 0.25rem;
+  border-radius: 5px;
+}
+.job-date{
+  letter-spacing: 0.1rem;
+}
+.job-desc{
+  display:grid;
+  grid-template-columns: auto 1fr;
+  column-gap:2rem;
+  margin-bottom: 1.25rem;
+  margin-top: 2rem;
+}
+.job-desc p{
+  margin-bottom: 0;
+  margin-top: -10px;
+}
+.duty-icon{
+  color: #1bda3b;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
